# Grep

./: CMakeLists.txt  MyGrep.cpp  MyGrep.hpp  README.md  README_pl.md  ThreadPool.cpp  ThreadPool.hpp  TietoEvry_cpp_task001.txt  main.cpp  test.cpp
locs/: file5  file6
locs/loc1/: file1
locs/loc2/: file2  file3
locs/loc3/: file4
